<resources>
    <string name="app_name">lookout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="title_activity_goods__services">Goods_Services</string>

    <string name="police"> POLICE </string>
    <string name="fire"> FIRE </string>
    <string name="hospital"> HOSPITAL</string>


    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>



    <string name="button_get_started">Get Started</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="button_sign_up">Sign me up</string>
    <string name="button_sign_in">Already a member</string>
    <string name="button_signIn">Sign In</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="button_next">Next</string>

    <string name="city_hint">City</string>
    <string name="email_hint">Email Address</string>
    <string name="sign_out">Sign Out</string>
    <string name="password_hint">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="separator">or</string>
    <string name="email_signup">Sign up with email</string>
    <string name="agreement">By tapping Sign up, you agree to our Membership Agreement and that you have read our Terms and Conditions, and Privacy Policy</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_join_community">JoinCommunityActivity</string>


    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite</string>

    <string name="cities">Your City</string>
    <string name="subCommunity">Sub Community</string>

    <string name="addrLn1">Street Name</string>
    <string name="addrLn2">Address Line 2</string>
    <string name="addrNum">House#</string>
    <string name="buttonJoinCommunity">Join this Community</string>
    <string name="title_activity_main">LOOKOUT-TT</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="title_activity_community">Community</string>
    <string name="share">share</string>

</resources>
