<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    >

    <group android:clickable="false">

        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:title="@string/inbox_string" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:title="@string/starred_string" />


</group>

    <item android:title="Emergency Services">
        <menu>
            <item
                android:id="@+id/police"
                android:checked="false"
                android:title="@string/police"
                android:icon="@drawable/police_station"/>
            <item
                android:id="@+id/fire"
                android:checked="false"
                android:title="@string/fire"
                android:icon="@drawable/fire_station"/>
            <item
                android:id="@+id/hospital"
                android:checked="false"
                android:title="@string/hospital"
                android:icon="@drawable/hospital"/>
        </menu>
    </item>
</menu>